--- a/css/reset.css
+++ b/css/reset.css
@@ -90,3 +90,12 @@ video {
 input:focus {
   outline: none;
 }
+
+ul {
+  list-style: none;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
